@@ -41,7 +41,8 @@ class ComboBox
   _CLASS_GTKOBJECT(ComboBox, GtkComboBox, GTK_COMBO_BOX, Gtk::Bin, GtkBin)
   _IMPLEMENTS_INTERFACE(CellLayout)
 public:
-  _WRAP_CTOR(ComboBox(const Glib::RefPtr<TreeModel>& model), gtk_combo_box_new)
+  _CTOR_DEFAULT()
+  _WRAP_CTOR(ComboBox(const Glib::RefPtr<TreeModel>& model), gtk_combo_box_new{with_model)
   _IGNORE(gtk_combo_box_new, gtk_combo_box_new_text)
 
 
@@ -61,13 +62,13 @@ public:
   _WRAP_METHOD(void set_active(const TreeModel::iterator& iter), gtk_combo_box_set_active_iter)
   void unset_active();
 
-/* getters and setters */
   _WRAP_METHOD(Glib::RefPtr<TreeModel> get_model(), gtk_combo_box_get_model)
   _WRAP_METHOD(Glib::RefPtr<const TreeModel> get_model() const, gtk_combo_box_get_model)
-  
+  _WRAP_METHOD(void set_model(const Glib::RefPtr<TreeModel>& model), gtk_combo_box_set_model)
+    
   _IGNORE(gtk_combo_box_append_text, gtk_combo_box_insert_text, gtk_combo_box_prepend_text) //These are in ComboBoxText.
 
-  //Construct-only: _WRAP_PROPERTY("model", Glib::RefPtr<TreeModel>)
+  //TODO: _WRAP_PROPERTY("model", Glib::RefPtr<TreeModel>)
   _WRAP_PROPERTY("wrap_width", int)
   _WRAP_PROPERTY("row_span_column", int)
   _WRAP_PROPERTY("column_span_column", int)
