@@ -20,6 +20,7 @@
  */
 
 #include <gtkmm/combobox.h>
+
 _DEFS(gtkmm,gtk)
 _PINCLUDE(gtkmm/private/combobox_p.h)
 
@@ -35,8 +36,9 @@ class ComboBoxEntry : public ComboBox
 {
   _CLASS_GTKOBJECT(ComboBoxEntry, GtkComboBoxEntry, GTK_COMBO_BOX_ENTRY, Gtk::ComboBox, GtkComboBox)
 public:
-  //TODO: explicit ComboBoxEntry();
-  _WRAP_CTOR(ComboBoxEntry(const Glib::RefPtr<TreeModel>& model, int text_column = 0), gtk_combo_box_entry_new)
+  _CTOR_DEFAULT()
+  _WRAP_CTOR(ComboBoxEntry(const Glib::RefPtr<TreeModel>& model, const TreeModelColumnBase& text_column), gtk_combo_box_entry_new_with_model)
+  _WRAP_CTOR(ComboBoxEntry(const Glib::RefPtr<TreeModel>& model, int text_column = 0), gtk_combo_box_entry_new_with_model)
 
   _WRAP_METHOD(int get_text_column() const, gtk_combo_box_entry_get_text_column)                                          
 };
