@@ -5461,8 +5461,22 @@
   (c-name "gtk_combo_box_entry_new")
   (is-constructor-of "GtkComboBoxEntry")
   (return-type "GtkWidget*")
+)
+
+(define-function gtk_combo_box_entry_new_with_model
+  (c-name "gtk_combo_box_entry_new_with_model")
+  (return-type "GtkWidget*")
   (parameters
     '("GtkTreeModel*" "model")
+    '("gint" "text_column")
+  )
+)
+
+(define-method set_text_column
+  (of-object "GtkComboBoxEntry")
+  (c-name "gtk_combo_box_entry_set_text_column")
+  (return-type "none")
+  (parameters
     '("gint" "text_column")
   )
 )
@@ -5485,6 +5499,11 @@
 (define-function gtk_combo_box_new
   (c-name "gtk_combo_box_new")
   (is-constructor-of "GtkComboBox")
+  (return-type "GtkWidget*")
+)
+
+(define-function gtk_combo_box_new_with_model
+  (c-name "gtk_combo_box_new_with_model")
   (return-type "GtkWidget*")
   (parameters
     '("GtkTreeModel*" "model")
@@ -5548,6 +5567,15 @@
   (return-type "none")
   (parameters
     '("GtkTreeIter*" "iter")
+  )
+)
+
+(define-method set_model
+  (of-object "GtkComboBox")
+  (c-name "gtk_combo_box_set_model")
+  (return-type "none")
+  (parameters
+    '("GtkTreeModel*" "model")
   )
 )
 
@@ -7888,7 +7916,7 @@
   (c-name "gtk_file_chooser_set_local_only")
   (return-type "none")
   (parameters
-    '("gboolean" "files_only")
+    '("gboolean" "local_only")
   )
 )
 
@@ -8169,7 +8197,7 @@
   (c-name "gtk_file_chooser_add_shortcut_folder_uri")
   (return-type "gboolean")
   (parameters
-    '("const-char*" "folder")
+    '("const-char*" "uri")
     '("GError**" "error")
   )
 )
@@ -8179,7 +8207,7 @@
   (c-name "gtk_file_chooser_remove_shortcut_folder_uri")
   (return-type "gboolean")
   (parameters
-    '("const-char*" "folder")
+    '("const-char*" "uri")
     '("GError**" "error")
   )
 )
@@ -8882,6 +8910,15 @@
 
 
 ;; From /home/murrayc/cvs/gnome26/gtk+/gtk/gtkfilesystemunix.h
+
+(define-function gtk_file_system_unix_get_type
+  (c-name "gtk_file_system_unix_get_type")
+  (return-type "GType")
+)
+
+
+
+;; From /home/murrayc/cvs/gnome26/gtk+/gtk/gtkfilesystemwin32.h
 
 (define-function gtk_file_system_unix_get_type
   (c-name "gtk_file_system_unix_get_type")
@@ -12445,6 +12482,15 @@
     '("guint" "right_attach")
     '("guint" "top_attach")
     '("guint" "bottom_attach")
+  )
+)
+
+(define-method set_monitor
+  (of-object "GtkMenu")
+  (c-name "gtk_menu_set_monitor")
+  (return-type "none")
+  (parameters
+    '("gint" "monitor_num")
   )
 )
 
@@ -26218,14 +26264,6 @@
 
 
 ;; From /home/murrayc/cvs/gnome26/gtk+/gtk/gtkwindow-decorate.h
-
-(define-function gtk_decorated_window_init
-  (c-name "gtk_decorated_window_init")
-  (return-type "none")
-  (parameters
-    '("GtkWindow*" "window")
-  )
-)
 
 (define-function gtk_decorated_window_calculate_frame_size
   (c-name "gtk_decorated_window_calculate_frame_size")
