@@ -1,3 +1,10 @@
+2003-11-17  Murray Cumming  <murrayc@usa.net>
+
+	* gtk/src/combobox.hg: Changed constructors, and added set_model(),
+	because the model is now a non-construct-only property in GTK+.
+	* gtk/gtkmm/comboboxtext.[h|cc]: Used changed API to implement this.
+	examples/book/combobox/text now works.
+
 2003-11-16  Murray Cumming  <murrayc@usa.net>
 
 	* gtk/src/toolbar.[hg|cc]: Wrapped new functions, including the 
